# skemmtun

./: .gitignore  LICENSE  README.md  run.sh  skemmtun.cabal  stack.yaml
src/: MAL.hs  Main.hs  Pretty.hs  Utils.hs
src/MAL/: API.hs  Command.hs  Credentials.hs  Types.hs
src/MAL/API/: Add.hs  Delete.hs  List.hs  Search.hs  Update.hs  Verify.hs
src/MAL/Command/: Execute.hs  Parse.hs  Types.hs
src/MAL/Types/: Anime.hs  Common.hs  Manga.hs
