name:                skemmtun
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jocelyn MEYRON
maintainer:          Jocelyn.Meyron@grenoble-inp.org
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable mal
  ghc-options:         -Wall -O2
  main-is:             Main.hs
  other-modules:       MAL.API,
                       MAL.API.List,
                       MAL.API.Verify,
                       MAL.Credentials,
                       MAL.Types,
                       MAL.Types.Common,
                       MAL.Types.Anime,
                       MAL.Types.Manga,
                       Utils
  build-depends:       base >=4.8 && <4.9,
                       bytestring >=0.10 && <0.11,
                       http-client >=0.4 && <0.5,
                       lens >=4.5 && <5,
                       text >=1.2 && <1.3,
                       wreq >=0.4 && <0.5,
                       xml-conduit >=1.3 && <1.4
  hs-source-dirs:      src
  default-language:    Haskell2010
